--- a/index.html
+++ b/index.html
@@ -372,6 +372,12 @@ $(document).ready(function () {
     <li>
       <a href="q2_html_pages/Wiederholung1.html">Sitzung 2: Skript zu Video Teil 1 und 2</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung3a.html">Sitzung 3: Skript zu Video Teil 1</a>
+    </li>
+    <li>
+      <a href="q2_html_pages/Sitzung3b.html">Sitzung 3: Skript zu Video Teil 2</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -408,6 +414,7 @@ $(document).ready(function () {
 </ul>
 <p><br></p>
 <p>Viel Spaß!</p>
+<pre class="r"><code>## rmarkdown::render_site</code></pre>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
