--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -900,8 +900,9 @@ body {
 <div id="zusatz-zum-eigenständigen-üben-1" class="section level3">
 <h3><span class="header-section-number">4.2.1</span> Zusatz zum eigenständigen Üben</h3>
 <ul>
-<li>Die Daten für die am Ende des Video erwähnte Zusatzaufgabe gibt es <a href="q2_dataFiles/Daten_Albumsales.csv">hier</a>.</li>
-<li>Falls ihr allein nicht weiterkommt, gibt es das Skript dazu <a href="q2_html_pages/Sitzung4d_Regression02.html">hier</a>.</li>
+<li><p>Die Daten für die am Ende des Video erwähnte Zusatzaufgabe gibt es <a href="q2_dataFiles/Daten_Albumsales.csv">hier</a>.</p></li>
+<li><p>Falls ihr allein nicht weiterkommt, gibt es das Skript dazu <a href="q2_html_pages/Sitzung4d_Regression02.html">hier</a>.</p></li>
+<li><p>Auf <a href="q2_html_pages/Sitzung4e_Sums_of_squares.html">dieser Seite</a> gibt es nochmal eine Berechnung der verschiedenen Quadratsummen per Hand, zum Nachvollziehen und Verstehen (bei Bedarf).</p></li>
 </ul>
 <p><br></p>
 </div>
