--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -467,6 +467,12 @@ div.tocify {
     <li>
       <a href="q2_html_pages/Sitzung4d_Regression02.html">Sitzung 4: Skript Zusatzaufgabe Album-Sales</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung5a_Annahmen.html">Sitzung 5: Skript zu Video (Annahmen)</a>
+    </li>
+    <li>
+      <a href="q2_html_pages/Sitzung5b_PruefungAnnahmen_Zusatzaufgabe_SuperModels_Loesung.html">Sitzung 5: Skript zu Zusatzaufgabe (Annahmen)</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -902,10 +908,54 @@ body {
 <ul>
 <li><p>Die Daten für die am Ende des Video erwähnte Zusatzaufgabe gibt es <a href="q2_dataFiles/Daten_Albumsales.csv">hier</a>.</p></li>
 <li><p>Falls ihr allein nicht weiterkommt, gibt es das Skript dazu <a href="q2_html_pages/Sitzung4d_Regression02.html">hier</a>.</p></li>
-<li><p>Auf <a href="q2_html_pages/Sitzung4e_Sums_of_squares.html">dieser Seite</a> gibt es nochmal eine Berechnung der verschiedenen Quadratsummen per Hand, zum Nachvollziehen und Verstehen (bei Bedarf).</p></li>
+<li><p>Auf <a href="q2_html_pages/Sitzung4e_Sum_of_squares.html">dieser Seite</a> gibt es nochmal eine Berechnung der verschiedenen Quadratsummen per Hand, zum Nachvollziehen und Verstehen (bei Bedarf).</p></li>
 </ul>
 <p><br></p>
 </div>
+</div>
+</div>
+<div id="sitzung-5-multiple-regressionsanalyse-iii-prüfung-annahmen" class="section level1">
+<h1><span class="header-section-number">5</span> Sitzung 5: Multiple Regressionsanalyse III (Prüfung Annahmen)</h1>
+<ul>
+<li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung5a_Annahmen.html">hier</a></p></li>
+<li><p>Anzahl Videos: 1 (Dauer ca. 66 min), zum Video geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1589892041573">hier</a></p></li>
+<li><p>Benötigte Datensätze: 1, den gibt es <a href="q2_dataFiles/Daten_Pruefungsleistung_Annahmen.csv">hier</a></p></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Inhalt (Timestamps):
+<ul>
+<li>00:00 Einführung “Prüfung annahmen”</li>
+<li>04:20 Daten einlesen und Streudiagramm machen und wichtige Annahmen optisch prüfen</li>
+<li>09:30 RESET-Test zur Prüfung linearer Zusammenhänge</li>
+<li>15:10 Multikollinearität (Korrelationen der Prädiktoren untereinander) statistisch prüfen</li>
+<li>18:30 VIFs mit R-Commander bestimmen</li>
+<li>22:00 Normalverteilung der Residuen</li>
+<li>26:00 Regressionstatistken über R-Commander zum Datensatz hinzufügen</li>
+<li>28:30 Grafische Analyse der Residuen (Histogramm)</li>
+<li>29:50 Grafische Analyse der Residuen (Q-Q-Plot)</li>
+<li>36:00 Test auf Normalverteilung der Residuen (Shapiro-Wilk Test)</li>
+<li>37:50 Homoskedastizität grafisch prüfen</li>
+<li>44:15 Statistischer Test auf Heteroskedastizität (Breusch-Pagan Test)</li>
+<li>48:25 Statistische Ausreißer (einzelne Werte, die angepasste Regressionslinie stark beeinflussen)</li>
+<li>55:30 Unabhängigkeit der Messungen (ein Messwert ist unabhängig von anderen Messwerten)</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>wissen, welche Annahmen erfüllt sein müssen, damit eine multiple Regressionsanalyse vertrauenswürdige Ergebnisse liefert</li>
+<li>wissen, wie man diese Annahmen für ein gegebenes Szenario in R prüfen kann</li>
+</ul></li>
+</ul>
+<p><br></p>
+<div id="zusatz-zum-eigenständigen-üben-2" class="section level2">
+<h2><span class="header-section-number">5.1</span> Zusatz zum eigenständigen Üben</h2>
+<ul>
+<li>Die Daten für eine Zusatzaufgabe gibt es <a href="q2_dataFiles/Daten_Supermodels.csv">hier</a>.</li>
+<li>Das Script dazu, gibt es <a href="q2_html_pages/Sitzung5b_PruefungAnnahmen_Zusatzaufgabe_SuperModels_Loesung.html">hier</a>.</li>
+</ul>
 </div>
 </div>
 
