--- a/page-03deskriptiv.html
+++ b/page-03deskriptiv.html
@@ -467,6 +467,12 @@ div.tocify {
     <li>
       <a href="q2_html_pages/Sitzung4d_Regression02.html">Sitzung 4: Skript Zusatzaufgabe Album-Sales</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung5a_Annahmen.html">Sitzung 5: Skript zu Video (Annahmen)</a>
+    </li>
+    <li>
+      <a href="q2_html_pages/Sitzung5b_PruefungAnnahmen_Zusatzaufgabe_SuperModels_Loesung.html">Sitzung 5: Skript zu Zusatzaufgabe (Annahmen)</a>
+    </li>
   </ul>
 </li>
       </ul>
