--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -958,6 +958,61 @@ body {
 </ul>
 </div>
 </div>
+<div id="sitzung-6-einfaktorielle-anova-oder-lineares-modell-bei-faktoren-mit-mehr-als-zwei-ausprägungen" class="section level1">
+<h1><span class="header-section-number">6</span> Sitzung 6: Einfaktorielle ANOVA (oder: Lineares Modell bei Faktoren mit mehr als zwei Ausprägungen )</h1>
+<ul>
+<li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung6_Regression_EinfaktorielleAnova_Glastonbury_Day1_Day3.html">hier</a></p></li>
+<li><p>Anzahl Videos: 1 (Dauer ca. 75 min), zum Video geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1591186909168">hier</a></p></li>
+<li><p>Benötigte Datensätze: 1, den gibt es <a href="q2_dataFiles/Glastonbury.csv">hier</a></p></li>
+</ul>
+<p>Optional:</p>
+<ul>
+<li><p>Die im Video zur Vertiefung des Verständnisses gezeigte Excel-Datei (bei Minute 26:40) gibt es <a href="q2_dataFiles/Glastonbury_data.xlsx">hier</a></p></li>
+<li><p>Den Datensatz (als Excel-Datei) mit Dummy-Codierung, der im Verlauf des Videos erstellt wird, gibt es zum Download auch <a href="q2_dataFiles/Glastonbury_data_dummy.xlsx">hier</a></p></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Inhalt (Timestamps):
+<ul>
+<li>00:00 Intro: Faktoren mit mehr als zwei Ausprägungen</li>
+<li>03:00 Szenario</li>
+<li>07:00 Statistische Hypothesen bei klassischem Anova-Vorgehen</li>
+<li>08:30 Datensatz in R angucken</li>
+<li>10:40 “music” zum Faktor umwandeln</li>
+<li>11:00 Abbildung über Mittelwerte im Commander</li>
+<li>14:40 Abbildung über Mittelwerte mit ggplot2</li>
+<li>16:30 Homoskedastizität / Varianzhomogenität, Levene-Test</li>
+<li>22:00 Varianzanalyse rechnen</li>
+<li>24:00 Anova-Output interpretieren</li>
+<li>26:40 Anova-Erklärung in Excel</li>
+<li>37:40 Bonferroni post hoc test in R</li>
+<li>44:45 Anova als lineares Modell &amp; Dummy-Kodierung</li>
+<li>52:30 Modell erstellen und Output interpretieren</li>
+<li>59:15 direkt music</li>
+<li>63:15 Referenzkategorie ändern</li>
+<li>68:50 Effektgrößen und Teststärke</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>wissen, welche Annahmen erfüllt sein müssen, damit eine einfaktorielle Varianzanalyse vertrauenswürdige Ergebnisse liefert</li>
+<li>wissen, wie man diese Annahmen für ein gegebenes Szenario in R prüfen kann</li>
+<li>eine einfaktorielle ANOVA in R durchführen (und natürlich die Ergebnisse interpretieren) können</li>
+<li>wissen, wie man post-hoc tests für spezifische Gruppenvergleiche erhält</li>
+<li>verstehen, wieso eine einfaktorielle ANOVA eigentlich auch ein lineares Modell ist</li>
+<li>welche Effektgrößen es gibt, wie man sie bestimmt, und wie man die Teststärke in G-Power bestimmen kann</li>
+</ul></li>
+</ul>
+<p><br></p>
+<div id="zusatz-zum-eigenständigen-üben-3" class="section level2">
+<h2><span class="header-section-number">6.1</span> Zusatz zum eigenständigen Üben</h2>
+<ul>
+<li>Im Video führen wir die ANOVA nur für “Tag 1” des Festivals durch. Es gibt aber auch Daten für “Tag 3”. Dafür können Sie die Analyse selbständig machen. Zur Not finden sie das Script aber auch weiter unten im begleitenden und oben angegeben HTML-Script.</li>
+</ul>
+</div>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
