--- a/index.html
+++ b/index.html
@@ -397,6 +397,9 @@ $(document).ready(function () {
     <li>
       <a href="q2_html_pages/Sitzung5b_PruefungAnnahmen_Zusatzaufgabe_SuperModels_Loesung.html">Sitzung 5: Skript zu Zusatzaufgabe (Annahmen)</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung6_Regression_EinfaktorielleAnova_Glastonbury_Day1_Day3.html">Sitzung 6: Skript zu Video (Einfaktorielle ANOVA)</a>
+    </li>
   </ul>
 </li>
       </ul>
