--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -476,6 +476,12 @@ div.tocify {
     <li>
       <a href="q2_html_pages/Sitzung6_Regression_EinfaktorielleAnova_Glastonbury_Day1_Day3.html">Sitzung 6: Skript zu Video (Einfaktorielle ANOVA)</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung7_Anova_Zweifaktoriell_Krankheitsstudie_details.html">Sitzung 7: Skript zu Video (Mehrfaktorielle ANOVA)</a>
+    </li>
+    <li>
+      <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">Sitzung 7: Skript Zusatzaufgabe Katzen</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1013,6 +1019,45 @@ body {
 <h2><span class="header-section-number">6.1</span> Zusatz zum eigenständigen Üben</h2>
 <ul>
 <li>Im Video führen wir die ANOVA nur für “Tag 1” des Festivals durch. Es gibt aber auch Daten für “Tag 3”. Dafür können Sie die Analyse selbständig machen. Zur Not finden sie das Script aber auch weiter unten im begleitenden und oben angegeben HTML-Script.</li>
+</ul>
+</div>
+</div>
+<div id="sitzung-7-mehrfaktorielle-anova" class="section level1">
+<h1><span class="header-section-number">7</span> Sitzung 7: Mehrfaktorielle ANOVA</h1>
+<ul>
+<li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung7_Anova_Zweifaktoriell_Krankheitsstudie_details.html">hier</a></p></li>
+<li><p>Das Markdown-File zum Script gibt es als ZIP-File <a href="q2_dataFiles/Sitzung7_Anova_Zweifaktoriell_Krankheitsstudie_details.zip">hier</a></p></li>
+<li><p>Anzahl Videos: 1 (Dauer ca. 40 min), zum Video geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1591794497698">hier</a></p></li>
+<li><p>Benötigte Datensätze: 1, den gibt es <a href="q2_dataFiles/Daten_Krankheitsstudie.csv">hier</a></p></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Inhalt (Timestamps):
+<ul>
+<li>00:00 Einführung zweifaktorielle ANOVA</li>
+<li>02:15 Datensatz ansehen</li>
+<li>03:00 Hypothesen und Logik der Modellvergleiche</li>
+<li>10:00 Abbildung machen</li>
+<li>24:00 ANOVA als lineares Modell</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>wissen, wie man eine ANOVA für mehrfaktorielle Designs durchführt und interpretiert,</li>
+<li>verstehen, dass auch die ANOVA für mehrfaktorielle Designs mit der Logik Linearer Modelle erklärt werden kann,</li>
+<li>wie man Haupteffekte und Interaktionseffekte grafisch darstellen kann, und</li>
+<li>wissen, wie man Haupteffekte und Interaktionseffekte ahand von Abbildungen interpretieren kann</li>
+</ul></li>
+</ul>
+<p><br></p>
+<div id="zusatz-zum-eigenständigen-üben-4" class="section level2">
+<h2><span class="header-section-number">7.1</span> Zusatz zum eigenständigen Üben</h2>
+<ul>
+<li>Am Ende des Videos sprechen wir kurz über einen weiteren Datensatz zum eigenständigen Üben. Den findet ihr <a href="q2_dataFiles/CatsData.csv">hier</a>.</li>
+<li>Das R-Script dazu gibt es <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">hier</a>.</li>
+<li>Das Markdown-File zum Script gibt es als ZIP-File <a href="q2_dataFiles/Sitzung7_Zusatz_KatzenMusterloesung.zip">hier</a></li>
 </ul>
 </div>
 </div>
