--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -476,6 +476,12 @@ div.tocify {
     <li>
       <a href="q2_html_pages/Sitzung6_Regression_EinfaktorielleAnova_Glastonbury_Day1_Day3.html">Sitzung 6: Skript zu Video (Einfaktorielle ANOVA)</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung7_Anova_Zweifaktoriell_Krankheitsstudie_details.html">Sitzung 7: Skript zu Video (Mehrfaktorielle ANOVA)</a>
+    </li>
+    <li>
+      <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">Sitzung 7: Skript Zusatzaufgabe Katzen</a>
+    </li>
   </ul>
 </li>
       </ul>
